--- a/src/appsco-page-styles.html
+++ b/src/appsco-page-styles.html
@@ -41,6 +41,7 @@
             }
             :host .content-container {
                 margin-top: 10px;
+                @apply(--content-container);
             }
             :host .flex-horizontal {
                 @apply(--layout-horizontal);
