--- a/src/appsco-policies-page.html
+++ b/src/appsco-policies-page.html
@@ -8,6 +8,8 @@
 <link rel="import" href="../bower_components/paper-tabs/paper-tab.html">
 
 <link rel="import" href="components/page/appsco-content.html">
+<link rel="import" href="components/components/appsco-page-behavior.html">
+<link rel="import" href="components/components/appsco-list-observer-behavior.html">
 <link rel="import" href="components/policy/appsco-policies.html">
 <link rel="import" href="components/policy/appsco-policy-info.html">
 <link rel="import" href="components/policy/appsco-policy-settings.html">
