added policy name in breach log

--- a/src/auditlog/appsco-audit-log.html
+++ b/src/auditlog/appsco-audit-log.html
@@ -1009,7 +1009,7 @@
                         break;
 
                     case 'company_policy_breached':
-                        event = this.localize('company_policy_breached');
+                        event = this.localize('company_policy_breached', 'policy', item.data.name);
                         break;
 
                     default:
