Changed report name

--- a/src/appsco-app.html
+++ b/src/appsco-app.html
@@ -6715,7 +6715,7 @@
                         var link = document.createElement('a');
 
                         link.href = event.target.result;
-                        link.setAttribute('download', 'Compliance Report.xlsx');
+                        link.setAttribute('download', 'Policy Report.xlsx');
                         document.body.appendChild(link);
 
                         if (link.click) {
